@@ -1,3 +1,9 @@
+Mon Dec 15 20:52:49 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>
+
+        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
+
+          Added ERROR output for test to catch.
+
 Mon Dec 15 20:25:37 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>
 
         * dds/DCPS/transport/shmem/ShmemTransport.cpp:
